--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -81,8 +81,7 @@
     height: auto;
 }
 
-.card:hover,
-.selectedCard {
+.card:hover, .selectedCard {
     border-radius: 10px;
     box-shadow: 0 0 5px #003366;
     cursor: pointer;
@@ -153,62 +152,57 @@
 .MainText {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding-bottom: 4%;
-    /* position: relative; */
     margin-left: 7.5%;
     width: 25%;
     margin-top: 10%;
-
     button {
         align-self: start;
     }
-
     h1 {
         font-size: 2.5rem;
     }
-
     p {
         color: black;
         font-size: 1.5rem;
     }
-    .highlightTextAnimation1{
-        position: relative;
-        animation-name: upToDown;
-        animation-duration: 4s;
-        animation-delay: -2s;
-        color: #003366;
-      }
-      .highlightTextAnimation2{
-        position: relative;
-        animation-name: downToUp;
-        animation-duration: 4s;
-        animation-delay: -2s;
-        color: #003366;
-      }
     }
+    
+    .textContainer {
+        position: relative;
+        height: 50px;
+        overflow: hidden;
 
-@keyframes upToDown {
-    75% {bottom: 100px; 
-        opacity: 0; 
-      }
-      100% {bottom:0px;} 
+        .textAnimated {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            animation: slide 8s infinite;
+        }
+
+      .textAnimated span {
+        display: block; 
+        font-size: 2.5rem;
+        line-height: 50px;
+        color: #003366;
+        
+    }
 }
 
-@keyframes downToUp {
-    75%  {top:100px;
-    opacity: 0;
-    }
-    100% {top:0px;}
+@keyframes slide {
+    0% { transform: translateY(0); }
+    33.33% { transform: translateY(-100%); }
+    66.66% { transform: translateY(-200%); }
+    100% { transform: translateY(0); }
 }
 
-.MainText h1,
-.MainText p {
+
+
+
+.MainText h1, .MainText p{
     text-align: left;
 }
-
-.highlightText {
+.highlightText{
     color: #003366;
 }
 
@@ -219,72 +213,57 @@
     align-items: center;
     padding-bottom: 5%;
 }
-
 .easyHosting {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
-    background-color: #f9f9f9;
+    background-color: #f9f9f9;   
 }
-
-.easyHosting_text {
+.easyHosting_text{
     font-size: 25px;
 }
-
-.threeSteps {
+.threeSteps{
     display: flex;
     justify-content: space-between;
     padding-bottom: 4%;
 }
-
-.steps {
+.steps{
     display: flex;
     flex-direction: column;
-    width: 27%;
-
+    width: 27%;  
+    
 }
-
-.steps h1 {
+.steps h1{
     font-size: 100px;
-
+    
 }
-
-.steps h2 {
+.steps h2{
     font-weight: bold;
 }
-
-.steps h1,
-.steps h2,
-.steps p {
+.steps h1, .steps h2, .steps p {
     margin-bottom: 0px;
     margin-top: 0px;
-}
-
-.whyHostText {
+}  
+.whyHostText{
     width: 50%;
     margin-left: 10%;
     text-align: left;
-
     h1 {
         font-size: 2rem;
     }
-
     p {
         color: black;
     }
 }
-
-.whyHostText p {
+.whyHostText p{
     width: 85%;
 }
-
-.simpleSafe {
+.simpleSafe{
     background-color: #f9f9f9;
     padding: 5% 0;
 }
-
 .Cards {
     display: flex;
     justify-content: space-between;
@@ -298,41 +277,37 @@
     padding-top: 1%;
     background-color: #f9f9f9;
 }
-
-.firstSection {
-    display: flex;
+.firstSection{
+    display: flex;    
     justify-content: space-between;
 }
-
-.firstPicture {
+.firstPicture{
     width: 50%;
 }
-
-.firstPicture img {
-    border-bottom-left-radius: 80% 100%;
-    border-top-left-radius: 80% 100%;
+.firstPicture img{
+    border-bottom-left-radius: 80% 100%; 
+    border-top-left-radius: 80% 100%; 
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
-
-.whyHost {
+.whyHost{
     display: flex;
     padding-top: 5%;
     padding-bottom: 5%;
 }
-
-.SecPicture {
+.SecPicture{
     width: 45%;
     height: 60%;
 }
-
-.SecPicture img {
+.SecPicture img{
     width: 100%;
     height: 100%;
 }
 
-.simpleSafeCards {
+
+
+.simpleSafeCards{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -340,28 +315,24 @@
     width: 90%;
     text-align: left;
 }
-
-.simpleSafeCards img {
-    max-width: 3vw;
-
+.simpleSafeCards img{
+    max-width:3vw;
+    
 }
-
-.simpleSafeAll {
+.simpleSafeAll{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     p {
         color: black;
     }
 }
-
-.SimpleSafeAllCards {
+.SimpleSafeAllCards{
     display: flex;
     align-items: center;
     width: 75%;
-
+   
 }
 .clientRevieuw {
     display: flex;
@@ -479,35 +450,29 @@
     margin: 5% 0 5% 0;
     display: flex;
     flex-direction: column;
-
     h1 {
         font-size: 4rem;
         margin: 0;
         padding: 0;
     }
-
     .subText {
         font-size: 1.5rem;
         margin-top: 0;
     }
-
     .checkListItems {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         margin: 0 20% 0 20%;
-
         .checkListItem {
             display: flex;
             flex-direction: column;
             text-align: left;
-
             span {
                 max-width: 15vw;
             }
         }
     }
 }
-
 .faq {
     .landing__faq {
         width: 50%;
@@ -518,68 +483,58 @@
         cursor: pointer;
         transition: max-height 0.4s ease;
         overflow: hidden;
-
         .landing__faq__body {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-
             p {
                 color: black;
             }
         }
-
         .landing__faq__question {
             font-weight: bold;
         }
-
         .landing__faq__answer {
             text-align: left;
         }
     }
-
+    background-color: #f9f9f9;
+    /* margin: 5% 0 5% 0;
+    padding: 2rem; */
     .faq__header {
         display: flex;
         flex-direction: row;
         justify-content: center;
-
         img {
             max-width: 3vw;
             max-height: 3vh;
             align-self: center;
         }
-
         h1 {
             margin: 0;
         }
     }
-
     .faq__list {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 }
-
 .personal__advice {
     display: flex;
     flex-direction: row;
     margin: 0 5%;
     justify-content: space-between;
-
     .personal__advice__left {
         margin: 10% 0;
         text-align: left;
-
         h1 {
             font-size: 3.5rem;
         }
-
         button {
             width: auto;
         }
     }
-
     img {
         width: auto;
         height: auto;
@@ -599,62 +554,6 @@
     padding-top: 4%;
 }
 
-@media (max-width: 880px) {
-
-    .personal__advice {
-        display: flex;
-        flex-direction: column;
-        margin: 0 5%;
-        justify-content: space-between;
-
-        .personal__advice__left {
-            display: flex;
-            flex-direction: column;
-
-            margin: 10% 0;
-            text-align: center;
-            align-items: center;
-
-            h1 {
-                font-size: 3.5rem;
-            }
-
-            button {
-                width: auto;
-            }
-        }
-    }
-
-    .whyHost {
-        align-items: center;
-        flex-direction: column;
-
-        .SecPicture {
-            width: 25em;
-        }
-
-        .SecPicture img {
-            border-radius: 0;
-            width: 25em;
-            margin: 0;
-            object-fit: contain;
-        }
-
-        .whyHostText {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: auto;
-            text-align: center;
-            margin: 0;
-
-            p {
-                width: 80vw;
-            }
-        }
-    }
-}
-
 @media (max-width: 768px) {
     .container {
         width: auto;
@@ -662,11 +561,9 @@
         margin-bottom: 0.625rem;
     }
 
-    .MainText h1,
-    .WhyHow_text h1 {
+    .MainText h1, .WhyHow_text h1 {
         font-size: 1.6rem;
     }
-
 
 
     .SecPicture{
@@ -692,7 +589,6 @@
     .firstSection {
         display: flex;
         flex-direction: column-reverse;
-
         .MainText {
             width: 80vw;
             margin: 0;
@@ -700,69 +596,48 @@
             backdrop-filter: blur(0.25rem);
             border-radius: 1.5rem;
             background: rgba(0, 0, 0, 0.383);
-
             h1 {
                 font-size: 1.5rem;
                 margin: 0;
                 padding: 0;
                 color: white;
             }
-
             p {
                 font-size: 1rem;
                 color: white;
 
             }
-
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
         }
-
         .firstPicture img {
             border-radius: 0;
             width: 95vw;
             object-fit: contain;
         }
     }
-
     .easyHosting {
         .easyHosting_text {
             h1 {
                 font-size: 1.5rem;
             }
         }
-
         .threeSteps {
             flex-direction: column;
-
             .steps {
                 width: auto;
                 margin: 0 5%;
             }
         }
     }
-
     .whyHost {
         flex-direction: column;
-        align-items: normal;
-
-        .SecPicture {
-            width: 45%;
-            height: 60%;
-        }
-
-        .SecPicture img {
-            width: 100%;
-            height: 100%;
-        }
-
         .SecPicture img {
             border-radius: 0;
             width: 94vw;
             object-fit: contain;
         }
-
         .whyHostText {
             h1 {
                 width: 80vw;
@@ -773,14 +648,11 @@
             }
         }
     }
-
     .simpleSafe {
         .SimpleSafeAllCards {
             flex-direction: column;
-
             .simpleSafeCards {
                 margin-bottom: 2%;
-
                 img {
                     width: 10vw;
                     height: auto;
@@ -788,60 +660,49 @@
                     align-self: start;
                 }
             }
-
             .safeMiniText {
                 h3 {
-                    margin: 0; 
+                    margin: 0;
                 }
             }
         }
     }
-
     .checkList {
         h1 {
             font-size: 1.5rem;
         }
-
         .subText {
             font-size: 0.8rem;
         }
-
         .checkListItems {
             display: flex;
             flex-direction: column;
             margin: 0 5%;
-
             .checkListItem {
                 width: 80vw;
-
                 .checkListItem__text {
                     max-width: none;
                 }
             }
         }
     }
-
     .faq {
         .faq__header {
             img {
                 max-width: none;
                 width: auto;
             }
-
             h1 {
                 font-size: 1.5rem;
             }
         }
-
         .landing__faq {
             width: 80vw;
         }
     }
-
     .personal__advice {
         display: flex;
         flex-direction: column;
-
         .personal__advice__left {
             position: absolute;
             padding: 0.5rem;
@@ -854,23 +715,18 @@
             margin: 0;
             border-radius: 0 0 2rem 2rem;
             color: white;
-
             h1 {
                 font-size: 1.75rem;
             }
-
             h3 {
                 font-size: 0.75rem;
             }
         }
-
         img {
             width: auto;
             height: auto;
             object-fit: cover;
-
+        }
         
     }
-
-}
 }
