--- a/web/src/components/booking/listing.css
+++ b/web/src/components/booking/listing.css
@@ -42,13 +42,15 @@
   border-radius: 8px;
   width: 80%;
   max-width: 600px;
+  max-height: 80vh;
+  overflow-y: auto;
   position: relative;
 }
 
 .close-button {
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
   background: none;
   border: none;
   font-size: 24px;
@@ -299,12 +301,15 @@
 
 }
 
-.divider {
+.pageDividerr {
   border: none;
   border-top: 2px solid #ddd;
   width: 100%;
   margin: 20px 0;
 }
+
+
+
 .showMore{
   background-color: white;
   text-decoration: underline;
@@ -338,6 +343,8 @@
     grid-gap: 2%;
   }
 }
+
+
 .category-item {
   display: flex;
   flex-direction: row;
@@ -347,6 +354,7 @@
     font-size: 1rem;
   }
 }
+
 /* Stijl voor individuele functies */
 .acco-feature-item {
   display: flex;
