--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -53,3 +53,16 @@
     background-color: #4CAF50;
     color: white;
 }
+
+.exportToCalenderButton {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.exportToCalenderButton:hover {
+    opacity: 60%;
+}
