--- a/web/src/components/base/Register.css
+++ b/web/src/components/base/Register.css
@@ -127,9 +127,9 @@ label {
     padding-bottom: 4%;
     padding-top: 4%;
 }
-/* Password Strength Indicator Styles */
+
 .strength-container {
-    display: none; /* Initially hidden, will be shown on focus */
+    display: none; 
     margin-top: 10px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -138,30 +138,30 @@ label {
 }
 
 #strength-bar {
-    height: 10px; /* Height of the strength bar */
-    border-radius: 5px; /* Rounded corners for the bar */
-    transition: width 0.3s ease; /* Smooth transition for width changes */
+    height: 10px; 
+    border-radius: 5px; 
+    transition: width 0.3s ease; 
 }
 
 .strength-text {
-    margin-top: 5px; /* Space above the text */
-    font-size: 10px; /* Reduced font size for strength text */
-    color: #333; /* Text color */
+    margin-top: 5px; 
+    font-size: 10px; 
+    color: #333;
 }
 
-/* Requirements Styles */
+
 .requirements {
-    margin-top: 5px; /* Space above the requirements section */
+    margin-top: 5px; 
 }
 
 .requirements label {
-    display: flex; /* Use flexbox for better alignment */
-    align-items: center; /* Center align items vertically */
-    margin: 3px 0; /* Reduced spacing */
-    font-size: 10px; /* Reduced font size for requirement labels */
+    display: flex; 
+    align-items: center;
+    margin: 3px 0; 
+    font-size: 10px;
 }
 
-/* Strength Levels */
+
 .bad {
     width: 10%;
     background-color: red;
