Fix style onboard

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -72,6 +72,7 @@ h2{
   position: absolute;
   top: 5px;
   right: 5px;
+  color: black;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 50%;
@@ -285,7 +286,9 @@ h2{
 
 .round-button {
   width: 1.5em;
-  height: 1.5em;
+  /* height: 1.5em; */
+  margin-top: 0px;
+  padding: 0px;
   border-radius: 50%;
   border: 1px solid #003366;
   background-color: white;
@@ -551,6 +554,7 @@ h2{
 .toggle-checkbox:checked + .toggle-switch {
   background: #003366;
 }
+
 
 .toggle-checkbox:checked + .toggle-switch:before {
   left: 30px;
