--- a/web/src/components/hostverification/hostverification.module.css
+++ b/web/src/components/hostverification/hostverification.module.css
@@ -8,6 +8,17 @@ html, body {
   margin: 0 auto;
 }
 
+.headertext-container h1{
+  font-size: 1.625em;
+  font-weight: 800;
+  color: #484848;
+}
+
+.headertext-container p{
+  font-size: 1em;
+  color: #484848;
+}
+
 .verification-container {
   display: flex;
   flex-direction: column;
@@ -16,11 +27,6 @@ html, body {
   width: 50%;
   margin: auto;
   height: calc(100vh - 94.88px);
-}
-
-.verification-container h1{
-  font-size: 2em;
-  font-weight: 600;
 }
 
 .verification-container svg{
@@ -63,8 +69,8 @@ html, body {
 }
 
 .left-container h1 {
-  font-size: 2em;
-  font-weight: 500;
+  font-size: 1.625em;
+  font-weight: normal;
 }
 
 .right-container {
@@ -113,17 +119,18 @@ hr {
 }
 
 .option-title{
-  font-size: 1.2em;
+  font-size: 0.875em;
   color: black;
 }
 
 .option-text{
-  font-size: 1em;
+  font-size: 0.875em;
   font-weight: 300;
   color: black;
 }
 
 .option-status {
+  font-size: 0.75em;
   color: black;
 }
 
@@ -149,20 +156,21 @@ hr {
 /* options */
 
 /* registration number input */
-.registrationnumber-inputfield {
-  margin-bottom: 20px;
-}
-
-.registrationnumber-inputfield h1 {
-  font-size: 1.5em;
+.registrationnumber-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  gap: 24px;
 }
 
 .registrationnumber-inputfield h2{
   text-align: left !important;
   margin: 0 !important;
-  font-size: 1.2em !important;
+  font-size: 1em !important;
   font-weight: 500;
-  color: black !important;
+  color: #484848 !important;
+  margin: 0 0 16px 0 !important;
 }
 
 .registrationnumber-inputfield input{
@@ -173,16 +181,30 @@ hr {
   font-size: 1em;
 }
 
+.registrationnumber-inputfield h1{
+  font-size: 1.5em;
+  font-weight: 800;
+  color: #484848;
+  margin: 0 0 16px;
+}
+
+.registrationnumber-inputfield p{
+  font-weight: 400;
+  color: #484848;
+}
+
 .registrationnumber-address h2{
   text-align: left !important;
   margin: 0 !important;
-  font-size: 1.2em !important;
+  font-size: 1em !important;
   font-weight: 500;
-  color: black !important;
+  color: #484848 !important;
+  margin: 0 0 16px 0 !important;
 }
 
 .registrationnumber-address p{
-  color: black;
+  font-weight: 400;
+  color: #484848;
 }
 
 .registrationnumber-legal{
@@ -190,7 +212,11 @@ hr {
   width: 100%;
   gap: 5px;
   align-items: flex-start;
-  margin-top: 20px;
+}
+
+.registrationnumber-legal p{
+  font-size: 0.875em;
+  color: #484848;
 }
 /* registration number input */
 
@@ -202,7 +228,7 @@ hr {
 }
 
 .phonenumber-inputfield input{
-  font-size: 20px;
+  font-size: 1em;
   padding: 10px 0 10px 5px;
   border: 1px solid #e1e1e1;
   border-top: none;
@@ -233,9 +259,9 @@ hr {
   border: 1px solid #ddd;
   border-radius: 10px 10px 0 0;
   width: 100%;
-  padding: 15px 40px 10px 5px;
-  font-size: 1.2em;
-  color: #000;
+  padding: 19px 40px 10px 5px;
+  font-size: 1em;
+  color: #484848;
   cursor: pointer;
   margin-bottom: 0;
 }
