checkbox and confirm
o proceed, please check the following boxes:
I declare that this property is legitimate.
I agree to the general terms and conditions. with a ref to the page.
You can only proceed if both checkboxes are selected.

Additionally, if you select both check-in and check-out options, you will be able to continue.

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -596,6 +596,15 @@ input[type="time"] {
   margin-top: 20px;
 }
 
+.verifyCheck{
+  width: 60vw;
+  line-height: normal;
+}
+
+.termsCondition{
+  text-decoration:underline;
+  
+}
 
 
 
